[package]
name = "intelhexes"
version = "0.1.0"
edition = "2018"
authors = ["Emil Hammarstroem <emil.a.hammarstrom@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "hex2dump"
harness = false

[dependencies]

